# ArchiveSorter

./: .pre-commit-config.yaml  README.md  pyproject.toml
archivesorter/: app.py  categorizer.py  config.py  file_manager.py  info_app.py  manager_app.py
archivesorter/database/: db.py  models.py
src/: config.py
src/database/: db.py
