[tool.poetry]
name = "archivesorter"
version = "0.1.0"
description = ""
authors = ["AlexHeinisch <6390741+AlexHeinisch@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.9.0"
rich = "^13.7.0"
pytest = "^7.4.3"
sqlmodel = "^0.0.14"
pydantic-settings = "^2.1.0"

[tool.pyright]
venvPath = '.'
venv = '.venv'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
